
1.6
 * NEW/IMPROVED:
   * #2845829 - "System uptime"
   * Update system
 * FIXED:
   * #2820170 - "System.ArgumentOutOfRangeException in network list"
   * #2845427 - "Indicator integer overflow"
   * Critical KProcessHacker denial-of-service security issues
   * Incorrect menu items for System threads
   * Crash when viewing error details in the event 
     of a corrupt configuration file

1.5
 * NEW/IMPROVED:
   * #2831605 - "Add handle count by type to process properties handle tab"
   * #2836706 - "Signature Column in Processes"
   * Improved kernel modules list
   * Detects custom kernels
   * Performance improvements
   * KTM resource manager information
 * FIXED:
   * Windows XP BSODs
   * Incorrect drive letter resolving for file handles
   * Linked token display on x64

1.4
 * NEW/IMPROVED:
   * Full support for Windows 7 SP0
   * Basic support for Windows 64-bit
   * Ability to unload drivers
   * Handle names for Kernel Transaction Manager (KTM) objects
   * Ability to save details for processes
   * Improved handle granted access display
   * Improved process window exit status display
   * Improved user prompts
   * Ability to open key handles in regedit
   * Thread list is more responsive
   * Process exit notification (in the process window) is now instant
   * Improved control tab indicies
   * Small performance improvements
 * FIXED:
   * #2821437 - "Windows 7 PsTerminateProcess crash"
   * #2834578 - "Unable to replace Task Manager with Process Hacker error"
   * Properties menu item for handles was disabled most of the time
   * Handle names could not be viewed properly without KPH and 
     on systems without the VC++ 9 runtime
   * Minor KPH pool leak
   * Annoying popup when Process Hacker replaces Task Manager on 
     Windows 7
   * No symbols for protected processes

1.3.9.0
 * NEW/IMPROVED:
   * #2812814 - "Auto-scroll option should be remembered"
   * Kernel-mode stack traces
   * POSIX process support, including command lines and 