@@ -11,6 +11,7 @@ Process Hacker
    * Incorrect menu items for System threads
    * Crash when viewing error details in the event 
      of a corrupt configuration file
+   * Notification icons were fixed at 16x16 size
 
 1.5
  * NEW/IMPROVED:
